--- a/index.html
+++ b/index.html
@@ -1,22 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Becca Parnass</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
     <link rel="stylesheet" href="css/style.css">
-    
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+        integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+        crossorigin="anonymous"></script>
 </head>
+
 <body>
-    <h1>Homepage</h1>
+    <h1>Hi! My name is Becca Parnass!</h1>
     <a href="#">Home</a>
     <a href="/resume/">Resume</a>
     <a href="/clips/">Clips</a>
     <a href="/contact/">Contact</a>
 
+    <h3>About Becca</h3>
+
+    <p>My name is Becca, and I am a dedicated and responsible student studying journalism at Philip Merrill College of
+        Journalism at the University of Maryland College Park.</p>
+
+    <p>I am currently a staff writer at Stories Beneath the Shell, a student-run digital publication. I pitch and cover
+        weekly stories that are of importance to the student body, and am responsible for meeting strict deadlines. </p>
+
+    <p>In the spring, I will be interning at DC Witness, a media company that combines journalism with transparency
+        regarding the D.C. criminal justice system. DC Witness reports on criminal cases as they progress through the
+        D.C. Superior Court.</p>
+
+    <p>When I'm not working in journalism, I enjoy creative writing and reading, and spending time with my family and
+        friends.</p>
+
 </body>
+
 </html>
